<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Save</string>
    <string name="web_client_id" translatable="false">741316235729-ohg8quvto8ajl8qpil4r9rm1o3gfml3t.apps.googleusercontent.com</string>
    <string name="title_activity_first_start">First Start</string>
    <string name="default_tags" translatable="false">OpenArchive</string>
    <string name="action_settings">Settings</string>
    <string name="internet_archive">Internet Archive</string>
    <string name="internet_archive_description">Upload your media to a free public account on the Internet Archive.</string>
    <string name="dweb_title">DWeb Storage</string>
    <string name="dweb_description">Connect to the decentralized web</string>
    <string name="servers">Servers</string>
    <string name="add_server">Add Server</string>
    <string name="lbl_rename_folder">Rename Folder</string>
    <string name="lbl_select_media">Select Media</string>
    <string name="lbl_remove_folder">Remove Folder</string>
    <string name="popup_archive_folder">Archive folder</string>
    <string name="popup_remove_folder">Remove folder from app</string>
    <string name="folder_empty_warning">Folder name cannot be empty</string>
    <string name="folder_rename_success">Folder renamed</string>
    <string name="folder_not_found">Folder not found</string>
    <string name="folder_removed">Folder removed</string>
    <string name="folder_archived">Folder archived successfully…</string>
    <string name="content_picker_label">Add media from</string>
    <string name="disable_passcode_dialog_title">Disable Passcode</string>
    <string name="disable_passcode_dialog_msg">Are you sure you want to disable the passcode?</string>
    <string name="tor_notification_title">Tor Network</string>
    <string name="tor_notification_connecting">Connecting to Tor network…</string>
    <string name="tor_notification_connected">Connected to Tor network</string>
    <string name="tor_notification_channel_name">Tor Service</string>
    <string name="tor_notification_channel_description">Notifications for the embedded Tor service</string>
    <string name="tor_status_connecting">Connecting to Tor…</string>
    <string name="tor_status_verifying">Connected, verifying routing…</string>
    <string name="tor_status_connected">Connected to Tor network</string>
    <string name="tor_status_verified">Connected, verified.\nExit: %1$s</string>
    <string name="tor_status_verified_with_country">Connected, verified.\nExit: %1$s - %2$s</string>
    <string name="tor_status_error">Tor error: %1$s</string>
    <string name="tor_notification_permission_title">Notification Permission</string>
    <string name="tor_notification_permission_message">To show Tor connection status in your notification bar, Save needs notification permission. You can still use Tor without this permission.</string>
    <string name="tor_disabled_title">Onion routing under development</string>
    <string name="tor_disabled_message">This feature is currently under development. For now, you can use Orbot or any VPN of your choice to enhance your privacy and security.</string>
    <string name="tor_download_btn_label">Download Orbot</string>
    <string name="lbl_Cancel">Cancel</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_retry">Retry</string>
    <string name="license_label">License</string>
    <string name="info_license_cc0">Waive all restrictions, requirements, and attribution (CC0).</string>
    <string name="info_license_deriv">Allow anyone to remix and share?</string>
    <string name="info_license_sharealike">Require them to share like you have?</string>
    <string name="info_license_comm">Allow commercial use?</string>
    <string name="menu_delete">Remove Media</string>
    <string name="menu_delete_desc">This media will be removed from Save.\nIt will remain on the server and in your Photos app.</string>
    <string name="hint_flag">Tap to flag as significant content</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="prefs_use_tor_title">Turn on Onion Routing</string>
    <string name="prefs_use_tor_summary">Transfer via the Tor Network only</string>
    <string name="prefs_theme_system" translatable="false">System Controlled</string>
    <string name="prefs_theme_light" translatable="false">Light</string>
    <string name="prefs_theme_dark" translatable="false">Dark</string>
    <string name="prefs_theme_val_system" translatable="false">system</string>
    <string name="prefs_theme_val_light" translatable="false">light</string>
    <string name="prefs_theme_val_dark" translatable="false">dark</string>
    <string name="prefs_use_proofmode_title">Enable ProofMode</string>
    <string name="prefs_use_proofmode_summary" translatable="false">Share ProofMode public key</string>
    <string name="prefs_use_proofmode_description"><![CDATA[ProofMode is a way to enhance the authentication and verification of multimedia content. <a href=\"%1$s\"><u>Learn more here.</u></a>]]></string>
    <string name="proof_mode_warning_text"><![CDATA[
    To help verify where your media was captured, ProofMode gathers data from nearby cell towers to corroborate your location. To add credibility and context, it then includes a separate metadata file with your media*. Android requires location access to collect this information.<br/><br/>
    <b>*Neither <i>Save</i> nor <i>OpenArchive</i> will be able to access or store this location data, it will only be accessible to those with access to the server files.</b>
    ]]>
    </string>
    <string name="prefs_share_proofmode_title">ProofMode Identity</string>
    <string name="prefs_share_proofmode_summary">Share ProofMode Public Key</string>
    <string name="phone_permission_required">Location permission required</string>
    <string name="prompt_username"><i>Username</i></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_italics"><i>Email</i></string>
    <string name="prompt_password"><i>Password</i></string>
    <string name="label_username">@string/prompt_email</string>
    <string name="placeholder_email_or_username">Enter an email or username</string>
    <string name="label_password">@string/prompt_password</string>
    <string name="placeholder_password">Enter a password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_username_or_password">Incorrect username or password</string>
    <string name="error_incorrect_email_or_password">Incorrect email or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="importing_media">Importing media…</string>
    <string name="title_welcome">Welcome!</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_about">About %s</string>
    <string name="add_a_folder">Add a Folder</string>
    <string name="browse_existing_folders">Browse Existing Folders</string>
    <string name="browse_existing">Browse Existing</string>
    <string name="title_activity_upload_manager">Upload Manager</string>
    <string name="uploads">Uploads</string>
    <string name="upload_manager_screen_title">Edit Queue</string>
    <string name="upload_manager_screen_subtitle">Uploading is paused</string>
    <string name="uploading">Uploading…</string>
    <string name="uploading_left">Uploading… (%d left)</string>
    <string name="uploads_notification_descriptions">These notifications show up while this app is performing media uploads.</string>
    <string name="action_upload">Upload</string>
    <string name="in_app_update_ready" translatable="false">A new version is ready to install.</string>
    <string name="in_app_update_restart" translatable="false">Restart</string>
    <string name="multiple_failed_attempts_message">App is locked due to multiple failed attempts. Please try again later.</string>
    <string name="passcode_not_set">Passcode not set</string>
    <string name="passcode_remaining_attempts">Incorrect passcode. %1$d attempts remaining.</string>
    <string name="passcode_too_many_failed_attempts">Too many failed attempts. App is locked.</string>
    <string name="passcode_lock_app">Lock app with passcode</string>
    <string name="enter_passcode">Enter Your Passcode</string>
    <string name="passcode_do_not_match">Passcodes do not match. Try again.</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="set_passcode">Set Passcode</string>
    <string name="set_passcode_warning">Make sure you remember this pin. If you forget it, you will need to reset the app, and all in-app data will be erased.</string>
    <string name="tap_to_add">Tap the button below to add media</string>
    <string name="tap_to_add_folder">Tap the button below to add a folder</string>
    <string name="tap_to_add_server">Tap the button below to add a server</string>
    <string name="to_get_started_connect_to_a_server_to_store_your_media">To get started, connect to a server to store your media.</string>
    <string name="to_get_started_more_hint_dweb">You can add multiple private servers and\none IA or DWeb Storage account at any time.</string>
    <string name="action_next">Next</string>
    <string name="back">Back</string>
    <string name="account">Account</string>
    <string name="action_continue">Continue</string>
    <string name="dweb_join_group_screen_title">Name your group and pick a user name</string>
    <string name="dweb_join_group_screen_description">A group on DWeb Storage is similar to a server, and a username acts as your folder within this group. You’ll be able to upload media under this username.</string>
    <string name="dweb_join_group_group_name">Group Name</string>
    <string name="dweb_join_group_repo_name">You name in this group</string>
    <string name="storacha">Storacha</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="my_spaces">My Spaces</string>
    <string name="storacha_is_a_decentralized_media_storage_system_using_ipfs_ucan_and_dids">Storacha lets you store media securely using decentralized technologies (IPFS, UCAN, and DIDs).</string>
    <string name="sign_up_storacha">Don\'t have an account?</string>
    <string name="email_address">Email address</string>
    <string name="users_can_delete_the_content_within_the_space">Users can delete the content within the space</string>
    <string name="users_can_read_the_content_within_the_space">Users can read the content within the space</string>
    <string name="users_can_write_content_to_the_space">Users can write content to the space</string>
    <string name="define_access_to_the_following_did_key">Define access to the following DID key</string>
    <string name="this_is_your_qr_code_to_request_access_please_ask_the_admin_to_scab_your_code_to_gain_access_to_soace">Here is your identity.\nShare this QR code or ID with an admin so they can add you to their space.</string>
    <string name="storacha_qr">storacha qr</string>
    <string name="please_check_your_inbox_and_click_the_link_on_the_verification_email">Please check your inbox and click the link on the verification email.</string>
    <string name="verification_email_sent">Verification Email Sent</string>
    <string name="change_email_link"><![CDATA[Email is incorrect? <a href="#">Change now.</a>]]></string>
    <string name="access_your_account_using_your_registered_email_address">Log in using your registered email address</string>
    <string name="label_login">Login</string>
</resources>