<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".features.settings.SpaceSetupSuccessFragment">

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:indeterminateTint="@color/c23_teal" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                android:src="@drawable/ic_email_verification"
                app:tint="@color/c23_teal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verification_email_sent"
                android:textAlignment="center"
                android:textFontWeight="600"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/please_check_your_inbox_and_click_the_link_on_the_verification_email"
                android:textAlignment="center"
                android:textFontWeight="400"
                android:layout_marginBottom="24dp"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_change_email_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/change_email_link"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:linksClickable="true"
                android:textColor="@android:color/darker_gray"/>

</LinearLayout>
